implemented multi environment execution